20180824 Jemmy: Fix RWD Alignment for 0820.

--- a/src/pages/welcome/index.less
+++ b/src/pages/welcome/index.less
@@ -104,13 +104,15 @@
     font-size: 7rem;
     font-weight: normal;
     font-style: italic;
-    margin-right: 16px;
+    margin-left: -40px;
 
     @media (max-width: 375px) {
       font-size: 6.375rem;
+      margin-left: -40px;
     }
     @media (max-width: 320px) {
       font-size: 5.375rem;
+      margin-left: -40px;
     }
   }
   .day {
